--- a/src/app/assessment/assessment.component.html
+++ b/src/app/assessment/assessment.component.html
@@ -52,9 +52,9 @@
                         </thead>
                         <tbody>
                           <tr>
-                            <td>{{esfuerzo}}</td>
-                            <td>{{tdev}}</td>
-                            <td>{{costoH}}</td>
+                            <td>{{esfuerzo | number: '1.3'}}</td>
+                            <td>{{tdev | number: '1.3'}}</td>
+                            <td>{{costoH | number: '1.3'}}</td>
                             <td>{{ncloc}}</td>
                             <td>Organico</td>
                           </tr>
