--- a/src/app/market/market.component.html
+++ b/src/app/market/market.component.html
@@ -23,6 +23,9 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-12" *ngIf="proys.length == 0">
+                <h3 align="center">No hay proyectos con esas caracteristicas</h3>
+            </div>
         </div>
     </div>
 </app-maincontainer>
