--- a/src/app/_modals/buyproyect/buyproyect.component.html
+++ b/src/app/_modals/buyproyect/buyproyect.component.html
@@ -2,7 +2,8 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header" align="center">
-          <h5 class="modal-title" id="exampleModalLabel"><i class="fa fa-money"></i> Obtener proyecto</h5>
+          <h5 *ngIf="!isBought" class="modal-title" id="exampleModalLabel"><i class="fa fa-money"></i> Obtener proyecto</h5>
+          <h5 *ngIf="isBought" class="modal-title" id="exampleModalLabel"><i class="fa fa-code"></i> Ver proyecto</h5>
           <button type="button" (click)="removeAll()" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
           </button>
@@ -11,13 +12,33 @@
           <div class="modal-body">
             <div class="row">
               <div class="col-md-12">
-                  <div class="form-group">
+                  <div *ngIf="!isBought" class="form-group">
+                      <label>{{proy.title}}</label>
+                      <hr>
+                      <table class="blueTable">
+                        <tr>
+                          <td>Balance actual</td>
+                          <td>{{user.sp}}</td>
+                        </tr>
+                        <tr>
+                            <td>Software points</td>
+                            <td>{{proy.price}}</td>
+                          </tr>
+                        <tr *ngIf="enough()">
+                          <td>Balance final</td>
+                          <td>{{user.sp-proy.price}}</td>
+                          </tr>
+                      </table>
+                      <hr>
+                      <button type="submit" [disabled]="!enough()" class="btn btn-info btn-fill pull-right" data-dismiss="modal" aria-label="Close" (click)="buy()">Aceptar</button>
+                  </div>
+                  <div *ngIf="isBought" class="form-group">
                       <label>{{proy.title}}</label>
                       <hr>
                       <p>Precio: {{proy.price}}</p>
                       <p>Balance: {{user.sp}}</p>
                       <hr>
-                      <button type="submit" [disabled]="!enough()" class="btn btn-info btn-fill pull-right" data-dismiss="modal" aria-label="Close" (click)="buy()">Aceptar</button>
+                      <button routerLink="/marketdetail/{{proy.id}}" type="submit" class="btn btn-primary btn-fill pull-right" data-dismiss="modal" aria-label="Close">Ver</button>
                   </div>
               </div>
             </div>
