--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -29,7 +29,7 @@
             <div class="modal-body">
                 <div class="modal-video">
                     <div class="embed-responsive embed-responsive-16by9">
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/EgFFAeG5BBQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							<iframe width="560" height="315" [src]='sanitizer.bypassSecurityTrustResourceUrl(vUrl)' frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
